; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_set_clock.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_set_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, double, i32)* @set_clock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_clock(i32* %0, double %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca double, align 8
  %6 = alloca i32, align 4
  %7 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store double %1, double* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call double (...) @av_gettime_relative()
  %9 = fdiv double %8, 1.000000e+06
  store double %9, double* %7, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load double, double* %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load double, double* %7, align 8
  %14 = call i32 @set_clock_at(i32* %10, double %11, i32 %12, double %13)
  ret void
}

declare dso_local double @av_gettime_relative(...) #1

declare dso_local i32 @set_clock_at(i32*, double, i32, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
